# stroke

./: .gitignore  Cargo.toml  README.md
assets/: tailwind.css
docs/: spec-v0.2.md  spec.md
src/: app.rs  capture.rs  document.rs  history.rs  main.rs  persist.rs  render.rs
tools/: fetch-tailwind.ps1
